before introducing the biogeochemical niche limitation

--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -269,6 +269,11 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import time\n",
+    "import ecosystem_plotting as plot\n",
     "from hybridmodel import *\n",
     "\n",
     "tf.random.set_seed(42)\n",
@@ -277,7 +282,7 @@
     "# --- 1. CONFIGURATION ---\n",
     "H, W = 100, 100\n",
     "MAX_AGENTS = 500000  # High limit for safety\n",
-    "N_STEPS = 100\n",
+    "N_STEPS = 500\n",
     "\n",
     "model = HybridEcosystem(height=H, width=W, max_agents=MAX_AGENTS)\n",
     "\n",
@@ -304,8 +309,6 @@
     "        print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")\n",
     "\n",
     "history_elements = np.array(history_elements)\n",
-    "\n",
-    "# --- 4. PLOTTING ---\n",
     "\n",
     "# Plot 1: Biomass Trajectory\n",
     "plt.figure(figsize=(10, 5))\n",
