with the elementome dynamics

--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -264,10 +264,12 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -284,10 +286,24 @@
     "MAX_AGENTS = 500000  # High limit for safety\n",
     "N_STEPS = 500\n",
     "\n",
-    "model = HybridEcosystem(height=H, width=W, max_agents=MAX_AGENTS)\n",
     "\n",
     "# Define your niche for Spp0\n",
-    "spp0_niche = [0.5, 0.15, 0.15, 0.15, 0.05]\n",
+    "spp0_niche = {\n",
+    "    \"center\": [0.50, 0.20, 0.10, 0.10, 0.10],\n",
+    "    \"left\":   [0.20, 0.05, 0.02, 0.02, 0.05],  # Sensitive to depletion (Left side steep)\n",
+    "    \"right\":  [0.20, 0.50, 0.50, 0.50, 0.50]   # Tolerant to excess (Right side wide)\n",
+    "}\n",
+    "\n",
+    "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
+    "NICHE_LEFT    = np.array([spp0_niche[\"left\"]], dtype=np.float32)\n",
+    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
+    "\n",
+    "model = HybridEcosystem(\n",
+    "    height=H, width=W, max_agents=MAX_AGENTS,\n",
+    "    niche_centers=NICHE_CENTERS,\n",
+    "    niche_left=NICHE_LEFT,\n",
+    "    niche_right=NICHE_RIGHT\n",
+    ")\n",
     "model.add_initial_seeds(count=100, niche_center=spp0_niche)\n",
     "\n",
     "history_biomass = []\n",
@@ -340,7 +356,9 @@
     "plt.title(f\"Spatial Distribution at Step {N_STEPS}\")\n",
     "plt.show()"
    ],
-   "id": "6eb2c4c67ce98db2"
+   "id": "6eb2c4c67ce98db2",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
