with the elementome dynamics

--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -305,7 +305,7 @@
     "    niche_left=NICHE_LEFT,\n",
     "    niche_right=NICHE_RIGHT\n",
     ")\n",
-    "model.add_initial_seeds(count=100, niche_center=spp0_niche)\n",
+    "model.add_initial_seeds(count=100)\n",
     "\n",
     "history_biomass = []\n",
     "history_elements = []\n",
