Chnage logic of elementome dynamics

--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -21,12 +21,19 @@
     "    !git pull\n",
     "    %cd ..\n",
     "\n",
-    "# 2. Copy the python files to the root so they can be imported\n",
-    "# (Colab looks for imports in /content/)\n",
-    "shutil.copy(f\"{REPO_NAME}/ecosystem_model.py\", \".\")\n",
-    "shutil.copy(f\"{REPO_NAME}/ecosystem_plotting.py\", \".\")\n",
+    "print(\"Files restored! You can now run imports.\")\n",
     "\n",
-    "print(\"Files restored! You can now run imports.\")"
+    "# 1. Define the path explicitly\n",
+    "repo_path = f\"/content/ElementalWorld\"\n",
+    "\n",
+    "# 2. Add it to system path if missing\n",
+    "if repo_path not in sys.path:\n",
+    "    sys.path.append(repo_path)\n",
+    "    print(f\"Added {repo_path} to sys.path\")\n",
+    "\n",
+    "# 3. Now try import\n",
+    "from hybridmodel import *\n",
+    "print(\"Success!\")"
    ],
    "metadata": {
     "colab": {
@@ -63,20 +70,89 @@
   {
    "cell_type": "code",
    "source": [
-    "import sys\n",
-    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "import time\n",
+    "import ecosystem_plotting as plot\n",
     "\n",
-    "# 1. Define the path explicitly\n",
-    "repo_path = f\"/content/ElementalWorld\"\n",
+    "tf.random.set_seed(42)\n",
+    "np.random.seed(42)\n",
     "\n",
-    "# 2. Add it to system path if missing\n",
-    "if repo_path not in sys.path:\n",
-    "    sys.path.append(repo_path)\n",
-    "    print(f\"Added {repo_path} to sys.path\")\n",
+    "# --- 1. CONFIGURATION ---\n",
+    "H, W = 100, 100\n",
+    "MAX_AGENTS = 500000  # High limit for safety\n",
+    "N_STEPS = 500\n",
     "\n",
-    "# 3. Now try import\n",
-    "import ecosystem_model\n",
-    "print(\"Success!\")"
+    "\n",
+    "# Define your niche for Spp0\n",
+    "spp0_niche = {\n",
+    "    \"center\": [0.60, 0.20, 0.1, 0.05, 0.05],\n",
+    "    \"left\":   [0.1, 0.1, 0.1, 0.1, 0.1],  # Sensitive to depletion (Left side steep)\n",
+    "    \"right\":  [0.1, 0.1, 0.1, 0.1, 0.1]   # Tolerant to excess (Right side wide)\n",
+    "}\n",
+    "\n",
+    "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
+    "NICHE_LEFT    = np.array([spp0_niche[\"left\"]], dtype=np.float32)\n",
+    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
+    "\n",
+    "model = HybridEcosystem(\n",
+    "    height=H, width=W, max_agents=MAX_AGENTS,\n",
+    "    niche_centers=NICHE_CENTERS,\n",
+    "    niche_left=NICHE_LEFT,\n",
+    "    niche_right=NICHE_RIGHT\n",
+    ")\n",
+    "model.add_initial_seeds(count=100)\n",
+    "\n",
+    "history_biomass = []\n",
+    "history_elements = []\n",
+    "\n",
+    "print(\"Starting Simulation...\")\n",
+    "for t in range(N_STEPS):\n",
+    "    n_agents = model.step()\n",
+    "\n",
+    "    if t % 10 == 0:\n",
+    "        # Record Stats\n",
+    "        grid_mass = model.get_biomass_grid()\n",
+    "        mean_mass = np.mean(grid_mass)\n",
+    "        history_biomass.append(mean_mass)\n",
+    "\n",
+    "        pools = model.get_element_pools()\n",
+    "        history_elements.append(pools)\n",
+    "\n",
+    "        print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")\n",
+    "\n",
+    "history_elements = np.array(history_elements)\n",
+    "\n",
+    "# Plot 1: Biomass Trajectory\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.plot(range(0, N_STEPS, 10), history_biomass, label=\"Mean Biomass\", color='green')\n",
+    "plt.xlabel(\"Step\")\n",
+    "plt.ylabel(\"Biomass per Pixel\")\n",
+    "plt.title(\"Population Growth (Agent-Based)\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot 2: Elemental Pools (C, N, P, K)\n",
+    "labels = [\"Carbon\", \"Nitrogen\", \"Phosphorus\", \"Potassium\", \"Other\"]\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "for i in range(5):\n",
+    "    plt.plot(range(0, N_STEPS, 10), history_elements[:, i], label=labels[i])\n",
+    "plt.xlabel(\"Step\")\n",
+    "plt.ylabel(\"Total Ecosystem Mass\")\n",
+    "plt.title(\"Elemental Stoichiometry Pools\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot 3: Final Map\n",
+    "final_grid = model.get_biomass_grid()\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "plt.imshow(final_grid, cmap='Greens', vmin=0, vmax=np.percentile(final_grid, 99))\n",
+    "plt.colorbar(label=\"Biomass\")\n",
+    "plt.title(f\"Spatial Distribution at Step {N_STEPS}\")\n",
+    "plt.show()"
    ],
    "metadata": {
     "colab": {
@@ -141,126 +217,23 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import time\n",
-    "from ecosystem_model import *\n",
-    "import ecosystem_plotting as plot\n",
+    " Run this after a few steps\n",
+    "# 1. Get Average Soil Stats\n",
+    "soil_state = model.soil.numpy()\n",
+    "inorg = soil_state[:, :, 0:4]\n",
+    "avg_soil_center = np.mean(inorg[40:60, 40:60], axis=(0,1)) # Center region\n",
+    "avg_soil_edge   = np.mean(inorg[0:20, 0:20], axis=(0,1))   # Edge region\n",
     "\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt\n",
+    "# 2. Get Your Species Niche Center\n",
+    "# (Assuming Species 0)\n",
+    "my_niche = model.niche_centers.numpy()[0]\n",
+    "# Note: my_niche is [C, N, P, K, O], so nutrients are indices 1-4\n",
+    "my_niche_nutrients = my_niche[1:5]\n",
     "\n",
-    "tf.random.set_seed(42)\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "# 1. Configuration\n",
-    "N = 10\n",
-    "H, W = 100, 100\n",
-    "\n",
-    "# 2. Define biogeochemical niches in element space [C, O, N, P, Other]\n",
-    "# Anchors\n",
-    "spp0 = [0.8, 0.2, 0.8, 0.8, 0.5]\n",
-    "spp1 = [0.2, 0.8, 0.2, 0.2, 0.5]\n",
-    "\n",
-    "# Random others\n",
-    "n_random = N - 2\n",
-    "random_niches = np.random.uniform(0.4, 0.6, (n_random, 5))\n",
-    "random_niches[:, 4] = 0.5\n",
-    "\n",
-    "niche_centers = np.vstack([spp0, spp1, random_niches]).astype(np.float32)\n",
-    "\n",
-    "# Niche widths and weights\n",
-    "niche_widths = np.random.uniform(0.2, 0.4, N).astype(np.float32)\n",
-    "niche_widths[0] = 0.25\n",
-    "niche_widths[1] = 0.25\n",
-    "\n",
-    "niche_weights = np.array([1.0, 2.0, 1.5, 1.5, 0.0], dtype=np.float32)\n",
-    "\n",
-    "# 3. Life‑history traits\n",
-    "growth_rates = np.linspace(0.3, 0.1, N).astype(np.float32)\n",
-    "mort_rates   = np.linspace(0.007, 0.005, N).astype(np.float32)\n",
-    "seed_probs   = np.linspace(0.1, 0.08, N).astype(np.float32)\n",
-    "\n",
-    "# general params\n",
-    "params = {\n",
-    "            \"K\":        1.5,\n",
-    "            \"input_N\":  0.02,\n",
-    "            \"input_P\":  0.01,\n",
-    "            \"leach_N\":  0.01,\n",
-    "            \"leach_P\":  0.005,\n",
-    "            \"diff_N\":  0.1,   # new\n",
-    "            \"diff_P\":  0.1,   # new\n",
-    "        }\n",
-    "\n",
-    "# 4. Create model\n",
-    "model = EcosystemModel(\n",
-    "    n_species=N,\n",
-    "    height=H,\n",
-    "    width=W,\n",
-    "    growth_rates=growth_rates,\n",
-    "    mort_rates=mort_rates,\n",
-    "    seed_probs=seed_probs,\n",
-    "    niche_centers=niche_centers,\n",
-    "    niche_widths=niche_widths,\n",
-    "    niche_weights=niche_weights,\n",
-    "    params=params\n",
-    ")\n",
-    "\n",
-    "model.initialize_grid()\n",
-    "\n",
-    "# 5. Run simulation and record mean biomass per species\n",
-    "history = []\n",
-    "totC_hist, totN_hist, totP_hist = [], [], []\n",
-    "n_steps = 250\n",
-    "\n",
-    "for t in range(n_steps):\n",
-    "    model.step()\n",
-    "    if t % 10 == 0:\n",
-    "        state = model.get_state()\n",
-    "        biomass = state[:, :, 4 + 5*N : 4 + 5*N + N]\n",
-    "        elem_C = state[:, :, 4 : 4 + N]\n",
-    "        elem_N = state[:, :, 4 + N : 4 + 2*N]\n",
-    "        elem_P = state[:, :, 4 + 2*N : 4 + 3*N]\n",
-    "\n",
-    "        total_C = elem_C.sum()\n",
-    "        total_N = elem_N.sum()\n",
-    "        total_P = elem_P.sum()\n",
-    "        means = biomass.mean(axis=(0, 1))\n",
-    "        history.append(means)\n",
-    "\n",
-    "        totC_hist.append(total_C)\n",
-    "        totN_hist.append(total_N)\n",
-    "        totP_hist.append(total_P)\n",
-    "\n",
-    "history = np.array(history)\n",
-    "totC_hist = np.array(totC_hist)\n",
-    "totN_hist = np.array(totN_hist)\n",
-    "totP_hist = np.array(totP_hist)\n",
-    "\n",
-    "\n",
-    "# 6. Plot biomass trajectories\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "for i in range(N):\n",
-    "    plt.plot(history[:, i], label=f\"Spp {i}\")\n",
-    "plt.xlabel(\"Time (x10 steps)\")\n",
-    "plt.ylabel(\"Mean biomass\")\n",
-    "plt.title(f\"{N}-species biogeochemical‑niche model\")\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.plot(totC_hist, label=\"Total C\")\n",
-    "plt.plot(totN_hist, label=\"Total N\")\n",
-    "plt.plot(totP_hist, label=\"Total P\")\n",
-    "plt.xlabel(\"Time (x10 steps)\")\n",
-    "plt.ylabel(\"Total biota element pool\")\n",
-    "plt.legend()\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "print(\"--- DIAGNOSTIC ---\")\n",
+    "print(f\"My Niche Ideal:  N={my_niche_nutrients[0]:.2f}, P={my_niche_nutrients[1]:.2f}\")\n",
+    "print(f\"Soil (Center):   N={avg_soil_center[0]:.2f}, P={avg_soil_center[1]:.2f}\")\n",
+    "print(f\"Soil (Edge):     N={avg_soil_edge[0]:.2f},   P={avg_soil_edge[1]:.2f}\")"
    ]
   },
   {
@@ -272,89 +245,9 @@
    },
    "cell_type": "code",
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import time\n",
-    "import ecosystem_plotting as plot\n",
-    "from hybridmodel import *\n",
-    "\n",
-    "tf.random.set_seed(42)\n",
-    "np.random.seed(42)\n",
-    "\n",
-    "# --- 1. CONFIGURATION ---\n",
-    "H, W = 100, 100\n",
-    "MAX_AGENTS = 500000  # High limit for safety\n",
-    "N_STEPS = 500\n",
-    "\n",
-    "\n",
-    "# Define your niche for Spp0\n",
-    "spp0_niche = {\n",
-    "    \"center\": [0.50, 0.20, 0.10, 0.10, 0.10],\n",
-    "    \"left\":   [0.20, 0.05, 0.02, 0.02, 0.05],  # Sensitive to depletion (Left side steep)\n",
-    "    \"right\":  [0.20, 0.50, 0.50, 0.50, 0.50]   # Tolerant to excess (Right side wide)\n",
-    "}\n",
-    "\n",
-    "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
-    "NICHE_LEFT    = np.array([spp0_niche[\"left\"]], dtype=np.float32)\n",
-    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
-    "\n",
-    "model = HybridEcosystem(\n",
-    "    height=H, width=W, max_agents=MAX_AGENTS,\n",
-    "    niche_centers=NICHE_CENTERS,\n",
-    "    niche_left=NICHE_LEFT,\n",
-    "    niche_right=NICHE_RIGHT\n",
-    ")\n",
-    "model.add_initial_seeds(count=100)\n",
-    "\n",
-    "history_biomass = []\n",
-    "history_elements = []\n",
-    "\n",
-    "print(\"Starting Simulation...\")\n",
-    "for t in range(N_STEPS):\n",
-    "    n_agents = model.step()\n",
-    "\n",
-    "    if t % 10 == 0:\n",
-    "        # Record Stats\n",
-    "        grid_mass = model.get_biomass_grid()\n",
-    "        mean_mass = np.mean(grid_mass)\n",
-    "        history_biomass.append(mean_mass)\n",
-    "\n",
-    "        pools = model.get_element_pools()\n",
-    "        history_elements.append(pools)\n",
-    "\n",
-    "        print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")\n",
-    "\n",
-    "history_elements = np.array(history_elements)\n",
-    "\n",
-    "# Plot 1: Biomass Trajectory\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "plt.plot(range(0, N_STEPS, 10), history_biomass, label=\"Mean Biomass\", color='green')\n",
-    "plt.xlabel(\"Step\")\n",
-    "plt.ylabel(\"Biomass per Pixel\")\n",
-    "plt.title(\"Population Growth (Agent-Based)\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
-    "\n",
-    "# Plot 2: Elemental Pools (C, N, P, K)\n",
-    "labels = [\"Carbon\", \"Nitrogen\", \"Phosphorus\", \"Potassium\", \"Other\"]\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "for i in range(5):\n",
-    "    plt.plot(range(0, N_STEPS, 10), history_elements[:, i], label=labels[i])\n",
-    "plt.xlabel(\"Step\")\n",
-    "plt.ylabel(\"Total Ecosystem Mass\")\n",
-    "plt.title(\"Elemental Stoichiometry Pools\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
-    "\n",
-    "# Plot 3: Final Map\n",
-    "final_grid = model.get_biomass_grid()\n",
-    "plt.figure(figsize=(6, 6))\n",
-    "plt.imshow(final_grid, cmap='Greens', vmin=0, vmax=np.percentile(final_grid, 99))\n",
-    "plt.colorbar(label=\"Biomass\")\n",
-    "plt.title(f\"Spatial Distribution at Step {N_STEPS}\")\n",
+    "plt.imshow(model.soil[:,:,1].numpy(), cmap='viridis')\n",
+    "plt.colorbar(label=\"Soil N\")\n",
+    "plt.title(\"Soil Nitrogen Distribution\")\n",
     "plt.show()"
    ],
    "id": "6eb2c4c67ce98db2",
