--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -82,14 +82,14 @@
     "# --- 1. CONFIGURATION ---\n",
     "H, W = 100, 100\n",
     "MAX_AGENTS = 500000  # High limit for safety\n",
-    "N_STEPS = 500\n",
+    "N_STEPS = 1000\n",
     "\n",
     "\n",
     "# Define your niche for Spp0\n",
     "spp0_niche = {\n",
-    "    \"center\": [0.60, 0.20, 0.1, 0.05, 0.05],\n",
-    "    \"left\":   [0.1, 0.1, 0.1, 0.1, 0.1],  # Sensitive to depletion (Left side steep)\n",
-    "    \"right\":  [0.1, 0.1, 0.1, 0.1, 0.1]   # Tolerant to excess (Right side wide)\n",
+    "    \"center\": [0.70, 0.20, 0.1, 0.05, 0.05],\n",
+    "    \"left\":   [0.1, 0.1, 0.07, 0.02, 0.02],  # Sensitive to depletion (Left side steep)\n",
+    "    \"right\":  [0.1, 0.1, 0.07, 0.01, 0.01]   # Tolerant to excess (Right side wide)\n",
     "}\n",
     "\n",
     "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
@@ -97,10 +97,17 @@
     "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
     "\n",
     "model = HybridEcosystem(\n",
-    "    height=H, width=W, max_agents=MAX_AGENTS,\n",
+    "    height=50, width=50, max_agents=10000,\n",
     "    niche_centers=NICHE_CENTERS,\n",
     "    niche_left=NICHE_LEFT,\n",
-    "    niche_right=NICHE_RIGHT\n",
+    "    niche_right=NICHE_RIGHT,\n",
+    "    growth_rate=0.7,\n",
+    "    respiration_rate=0.02,\n",
+    "    turnover_rate=0.02,\n",
+    "    mineralization_rate=0.05,\n",
+    "    seed_cost=0.3,\n",
+    "    seed_mass=0.05,\n",
+    "    K_biomass=1.5\n",
     ")\n",
     "model.add_initial_seeds(count=100)\n",
     "\n",
