--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -4,44 +4,45 @@
    "cell_type": "code",
    "source": [
     "import os\n",
-    "import shutil\n",
     "import sys\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import time\n",
     "\n",
     "# --- CONFIGURATION ---\n",
     "REPO_URL = \"https://github.com/filipematos95/ElementalWorld.git\"\n",
     "REPO_NAME = \"ElementalWorld\"\n",
     "# ---------------------\n",
     "\n",
-    "# 1. Clone the repo\n",
+    "# 1. Clone or update repo\n",
     "if not os.path.exists(REPO_NAME):\n",
     "    !git clone {REPO_URL}\n",
+    "    print(\"✅ Cloned!\")\n",
     "else:\n",
-    "    # If it exists, pull latest changes\n",
     "    %cd {REPO_NAME}\n",
     "    !git pull\n",
     "    %cd ..\n",
+    "    print(\"✅ Pulled latest!\")\n",
     "\n",
-    "print(\"Files restored! You can now run imports.\")\n",
+    "# 2. Get CURRENT working directory (not hardcoded /content/)\n",
+    "repo_path = os.path.abspath(REPO_NAME)\n",
+    "print(f\"Repo located at: {repo_path}\")\n",
     "\n",
-    "# 1. Define the path explicitly\n",
-    "\n",
-    "repo_path = f\"/content/ElementalWorld\"\n",
-    "\n",
-    "# 2. Add it to system path if missing\n",
+    "# 3. Add to sys.path FIRST (highest priority)\n",
     "if repo_path not in sys.path:\n",
-    "    sys.path.append(repo_path)\n",
-    "    print(f\"Added {repo_path} to sys.path\")\n",
+    "    sys.path.insert(0, repo_path)\n",
+    "    print(f\"✅ Added to sys.path: {repo_path}\")\n",
     "\n",
-    "# 3. Now try import\n",
-    "from hybridmodel import *\n",
-    "import ecosystem_plotting as plot\n",
+    "# 4. Verify files exist\n",
+    "print(\"Files in repo:\")\n",
+    "!ls -la {REPO_NAME}\n",
     "\n",
-    "print(\"Success!\")"
+    "# 5. Import\n",
+    "try:\n",
+    "    from hybridmodel import *\n",
+    "    import ecosystem_plotting as plot\n",
+    "    print(\"✅ Imports successful!\")\n",
+    "except ImportError as e:\n",
+    "    print(f\"❌ Import error: {e}\")\n",
+    "    print(\"Available files:\")\n",
+    "    !find {REPO_NAME} -name \"*.py\""
    ],
    "metadata": {
     "colab": {
@@ -80,7 +81,98 @@
     "\n",
     "# Define your niche for Spp0\n",
     "spp0_niche = {\n",
-    "    \"center\": [0.60, 0.20, 0.1, 0.05, 0.05],\n",
+    "    \"center\": [0.60, 0.20, 0.1,\n",
+    "               tf.random.set_seed(35)\n",
+    "               np.random.seed(35)\n",
+    "\n",
+    "               # --- 1. CONFIGURATION ---\n",
+    "               H, W = 100, 100\n",
+    "MAX_AGENTS = 150000  # High limit for safety\n",
+    "N_STEPS = 500\n",
+    "\n",
+    "\n",
+    "# Define your niche for Spp0\n",
+    "spp0_niche = {\n",
+    "    \"center\": [0.40, 0.25, 0.15, 0.05, 0.05],\n",
+    "    \"left\":   [0.2, 0.15, 0.1, 0.03, 0.03],\n",
+    "    \"right\":  [0.1, 0.15, 0.1, 0.03, 0.03]\n",
+    "}\n",
+    "\n",
+    "spp0_center = [0.25, 0.15, 0.05, 0.05]\n",
+    "spp1_center = [0.02, 0.017, 0.002, 0.531]\n",
+    "spp1_niche =  {\n",
+    "    \"center\": [0.43, 0.02, 0.017, 0.002, 0.531],\n",
+    "    \"right\":   [0.5, 0.01,  0.005, 0.001, 0.2],\n",
+    "    \"left\":  [0.35, 0.01,  0.005, 0.001, 0.2]   }\n",
+    "\n",
+    "\n",
+    "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
+    "NICHE_LEFT    = np.array([spp0_niche[\"left\"]], dtype=np.float32)\n",
+    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
+    "\n",
+    "growth_rate = 0.08\n",
+    "respiration_rate = 0.01\n",
+    "turnover_rate = 0.02\n",
+    "mineralization_rate = 0.05\n",
+    "seed_cost = 0.02\n",
+    "seed_mass = 0.02\n",
+    "K_biomass = 1.5\n",
+    "\n",
+    "model = HybridEcosystem(\n",
+    "    height=H, width=W, max_agents=MAX_AGENTS,\n",
+    "    niche_centers=NICHE_CENTERS,\n",
+    "    niche_left=NICHE_LEFT,\n",
+    "    niche_right=NICHE_RIGHT,\n",
+    "    growth_rate=growth_rate,\n",
+    "    respiration_rate=respiration_rate,\n",
+    "    turnover_rate=turnover_rate,\n",
+    "    mineralization_rate=mineralization_rate,\n",
+    "    seed_cost=seed_cost,\n",
+    "    seed_mass=seed_mass,\n",
+    "    K_biomass=K_biomass, soil_base_ratio=np.array(spp0_center), soil_pool_mean = 1.5, soil_pool_std = 0.05, soil_ratio_noise = 0.01, soil_input_rate = 1.0)\n",
+    "\n",
+    "model.add_initial_seeds(count=300)\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
+    "\n",
+    "# Nutrient names and soil indices\n",
+    "nutrients = [\n",
+    "    ('Nitrogen (N)', 0),\n",
+    "    ('Phosphorus (P)', 1),\n",
+    "    ('Potassium (K)', 2),\n",
+    "    ('Oxygen (O)', 3)\n",
+    "]\n",
+    "\n",
+    "# Plot each nutrient\n",
+    "for ax, (name, idx) in zip(axes.flatten(), nutrients):\n",
+    "    im = ax.imshow(model.soil[:,:,idx].numpy(), cmap='viridis')\n",
+    "ax.set_title(f'Soil {name} Distribution', fontsize=12)\n",
+    "plt.colorbar(im, ax=ax, label=f'{name} Concentration')\n",
+    "ax.set_xlabel('X Position')\n",
+    "ax.set_ylabel('Y Position')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "history_biomass = []\n",
+    "history_elements = []\n",
+    "history_biomass_grid = []\n",
+    "print(\"Starting Simulation...\")\n",
+    "for t in range(N_STEPS):\n",
+    "    n_agents = model.step()\n",
+    "\n",
+    "if t % 10 == 0:\n",
+    "# Record Stats\n",
+    "    grid_mass = model.get_biomass_grid()\n",
+    "mean_mass = np.mean(grid_mass)\n",
+    "history_biomass.append(mean_mass)\n",
+    "\n",
+    "pools = model.get_element_pools()\n",
+    "history_elements.append(pools)\n",
+    "if t % 50 == 0:\n",
+    "    history_biomass_grid.append(grid_mass)\n",
+    "\n",
+    "print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")0.05, 0.05],\n",
     "    \"left\":   [0.2, 0.1, 0.07, 0.02, 0.02],  # Sensitive to depletion (Left side steep)\n",
     "    \"right\":  [0.1, 0.1, 0.07, 0.02, 0.02]   # Tolerant to excess (Right side wide)\n",
     "}\n",
