--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -70,35 +70,23 @@
   {
    "cell_type": "code",
    "source": [
-    "tf.random.set_seed(42)\n",
-    "np.random.seed(42)\n",
+    "tf.random.set_seed(35)\n",
+    "np.random.seed(35)\n",
     "\n",
     "# --- 1. CONFIGURATION ---\n",
     "H, W = 100, 100\n",
-    "MAX_AGENTS = 50000  # High limit for safety\n",
-    "N_STEPS = 5000\n",
-    "\n",
-    "\n",
-    "# Define your niche for Spp0\n",
-    "spp0_niche = {\n",
-    "    \"center\": [0.60, 0.20, 0.1,\n",
-    "               tf.random.set_seed(35)\n",
-    "               np.random.seed(35)\n",
-    "\n",
-    "               # --- 1. CONFIGURATION ---\n",
-    "               H, W = 100, 100\n",
     "MAX_AGENTS = 150000  # High limit for safety\n",
-    "N_STEPS = 500\n",
+    "N_STEPS = 3000\n",
     "\n",
     "\n",
     "# Define your niche for Spp0\n",
     "spp0_niche = {\n",
     "    \"center\": [0.40, 0.25, 0.15, 0.05, 0.05],\n",
-    "    \"left\":   [0.2, 0.15, 0.1, 0.03, 0.03],\n",
+    "    \"left\":   [0.2, 0.1, 0.1, 0.03, 0.03],\n",
     "    \"right\":  [0.1, 0.15, 0.1, 0.03, 0.03]\n",
     "}\n",
     "\n",
-    "spp0_center = [0.25, 0.15, 0.05, 0.05]\n",
+    "spp0_center = [0.15, 0.01, 0.55, 0.24]\n",
     "spp1_center = [0.02, 0.017, 0.002, 0.531]\n",
     "spp1_niche =  {\n",
     "    \"center\": [0.43, 0.02, 0.017, 0.002, 0.531],\n",
@@ -106,17 +94,18 @@
     "    \"left\":  [0.35, 0.01,  0.005, 0.001, 0.2]   }\n",
     "\n",
     "\n",
-    "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
-    "NICHE_LEFT    = np.array([spp0_niche[\"left\"]], dtype=np.float32)\n",
-    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
+    "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"] ], dtype=np.float32)\n",
+    "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"]], dtype=np.float32)\n",
+    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"], spp1_niche[\"right\"]], dtype=np.float32)\n",
     "\n",
-    "growth_rate = 0.08\n",
+    "growth_rate = 0.15\n",
     "respiration_rate = 0.01\n",
-    "turnover_rate = 0.02\n",
+    "turnover_rate = 0.03\n",
     "mineralization_rate = 0.05\n",
     "seed_cost = 0.02\n",
     "seed_mass = 0.02\n",
-    "K_biomass = 1.5\n",
+    "K_biomass = 2.5\n",
+    "soil_input_rate = 1.5\n",
     "\n",
     "model = HybridEcosystem(\n",
     "    height=H, width=W, max_agents=MAX_AGENTS,\n",
@@ -129,9 +118,11 @@
     "    mineralization_rate=mineralization_rate,\n",
     "    seed_cost=seed_cost,\n",
     "    seed_mass=seed_mass,\n",
-    "    K_biomass=K_biomass, soil_base_ratio=np.array(spp0_center), soil_pool_mean = 1.5, soil_pool_std = 0.05, soil_ratio_noise = 0.01, soil_input_rate = 1.0)\n",
+    "    K_biomass=K_biomass, soil_base_ratio=np.array(spp0_center), soil_pool_mean = 1.5,\n",
+    "    soil_pool_std = 0.05, soil_ratio_noise = 0.01, soil_input_rate = soil_input_rate)\n",
     "\n",
-    "model.add_initial_seeds(count=300)\n",
+    "model.add_initial_seeds(count=300, species_id=0)\n",
+    "model.add_initial_seeds(count=300, species_id=1)\n",
     "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(12, 10))\n",
     "\n",
@@ -146,10 +137,10 @@
     "# Plot each nutrient\n",
     "for ax, (name, idx) in zip(axes.flatten(), nutrients):\n",
     "    im = ax.imshow(model.soil[:,:,idx].numpy(), cmap='viridis')\n",
-    "ax.set_title(f'Soil {name} Distribution', fontsize=12)\n",
-    "plt.colorbar(im, ax=ax, label=f'{name} Concentration')\n",
-    "ax.set_xlabel('X Position')\n",
-    "ax.set_ylabel('Y Position')\n",
+    "    ax.set_title(f'Soil {name} Distribution', fontsize=12)\n",
+    "    plt.colorbar(im, ax=ax, label=f'{name} Concentration')\n",
+    "    ax.set_xlabel('X Position')\n",
+    "    ax.set_ylabel('Y Position')\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
@@ -161,56 +152,7 @@
     "for t in range(N_STEPS):\n",
     "    n_agents = model.step()\n",
     "\n",
-    "if t % 10 == 0:\n",
-    "# Record Stats\n",
-    "    grid_mass = model.get_biomass_grid()\n",
-    "mean_mass = np.mean(grid_mass)\n",
-    "history_biomass.append(mean_mass)\n",
-    "\n",
-    "pools = model.get_element_pools()\n",
-    "history_elements.append(pools)\n",
-    "if t % 50 == 0:\n",
-    "    history_biomass_grid.append(grid_mass)\n",
-    "\n",
-    "print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")0.05, 0.05],\n",
-    "    \"left\":   [0.2, 0.1, 0.07, 0.02, 0.02],  # Sensitive to depletion (Left side steep)\n",
-    "    \"right\":  [0.1, 0.1, 0.07, 0.02, 0.02]   # Tolerant to excess (Right side wide)\n",
-    "}\n",
-    "\n",
-    "NICHE_CENTERS = np.array([spp0_niche[\"center\"]], dtype=np.float32)\n",
-    "NICHE_LEFT    = np.array([spp0_niche[\"left\"]], dtype=np.float32)\n",
-    "NICHE_RIGHT   = np.array([spp0_niche[\"right\"]], dtype=np.float32)\n",
-    "\n",
-    "growth_rate = 1\n",
-    "respiration_rate = 0.01\n",
-    "turnover_rate = 0.02\n",
-    "mineralization_rate = 0.05\n",
-    "seed_cost = 0.275\n",
-    "seed_mass = 0.05\n",
-    "K_biomass = 1.5\n",
-    "\n",
-    "model = HybridEcosystem(\n",
-    "    height=50, width=50, max_agents=10000,\n",
-    "    niche_centers=NICHE_CENTERS,\n",
-    "    niche_left=NICHE_LEFT,\n",
-    "    niche_right=NICHE_RIGHT,\n",
-    "    growth_rate=growth_rate,\n",
-    "    respiration_rate=respiration_rate,\n",
-    "    turnover_rate=turnover_rate,\n",
-    "    mineralization_rate=mineralization_rate,\n",
-    "    seed_cost=seed_cost,\n",
-    "    seed_mass=seed_mass,\n",
-    "    K_biomass=K_biomass, soil_base_ratio=np.array([0.2, 0.1, 0.05, 0.05]), soil_pool_std = 0, soil_ratio_noise = 0)\n",
-    "\n",
-    "model.add_initial_seeds(count=100)\n",
-    "history_biomass = []\n",
-    "history_elements = []\n",
-    "\n",
-    "print(\"Starting Simulation...\")\n",
-    "for t in range(N_STEPS):\n",
-    "    n_agents = model.step()\n",
-    "\n",
-    "    if t < 100 & t % 10 == 0 or :\n",
+    "    if t % 10 == 0:\n",
     "        # Record Stats\n",
     "        grid_mass = model.get_biomass_grid()\n",
     "        mean_mass = np.mean(grid_mass)\n",
@@ -218,6 +160,8 @@
     "\n",
     "        pools = model.get_element_pools()\n",
     "        history_elements.append(pools)\n",
+    "        if t % 50 == 0:\n",
+    "            history_biomass_grid.append(grid_mass)\n",
     "\n",
     "        print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")"
    ],
