--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -148,22 +148,33 @@
     "history_biomass = []\n",
     "history_elements = []\n",
     "history_biomass_grid = []\n",
+    "\n",
+    "N_SPP = 2 # Number of species\n",
+    "history_spp_biomass = [[] for _ in range(N_SPP)]\n",
+    "history_spp_count = [[] for _ in range(N_SPP)]\n",
+    "\n",
     "print(\"Starting Simulation...\")\n",
     "for t in range(N_STEPS):\n",
     "    n_agents = model.step()\n",
     "\n",
     "    if t % 10 == 0:\n",
-    "        # Record Stats\n",
-    "        grid_mass = model.get_biomass_grid()\n",
-    "        mean_mass = np.mean(grid_mass)\n",
-    "        history_biomass.append(mean_mass)\n",
+    "        # A. Record TOTAL stats (what you already have)\n",
+    "        grid_mass_total = model.get_biomass_grid()\n",
+    "        mean_mass_total = np.mean(grid_mass_total)\n",
+    "        history_biomass.append(mean_mass_total)\n",
     "\n",
     "        pools = model.get_element_pools()\n",
     "        history_elements.append(pools)\n",
-    "        if t % 50 == 0:\n",
-    "            history_biomass_grid.append(grid_mass)\n",
     "\n",
-    "        print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass:.4f}\")"
+    "        # B. NEW: Record PER-SPECIES stats\n",
+    "        for s_id in range(N_SPP):\n",
+    "            spp_grid = model.get_species_biomass(s_id)\n",
+    "            history_spp_biomass[s_id].append(np.mean(spp_grid))\n",
+    "\n",
+    "        if t % 50 == 0:\n",
+    "            history_biomass_grid.append(grid_mass_total)\n",
+    "\n",
+    "        print(f\"Step {t}: Agents={n_agents.numpy()}, Mean Biomass={mean_mass_total:.4f}\")"
    ],
    "metadata": {
     "colab": {
@@ -684,6 +695,23 @@
      ]
     }
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "plt.figure(figsize=(10, 5))\n",
+    "for s_id in range(N_SPP):\n",
+    "    plt.plot(range(0, N_STEPS, 10), history_spp_biomass[s_id], label=f\"Species {s_id}\")\n",
+    "\n",
+    "plt.plot(range(0, N_STEPS, 10), history_biomass, label=\"Total\", color='black', linestyle='--')\n",
+    "plt.legend()\n",
+    "plt.title(\"Biomass by Species\")\n",
+    "plt.show()"
+   ],
+   "id": "7e4fb4b9c6ffac4c"
   },
   {
    "metadata": {
