--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -70,13 +70,20 @@
   {
    "cell_type": "code",
    "source": [
+    "import os\n",
+    "import sys\n",
+    "import matplotlib.pyplot as plt\n",
+    "from hybridmodel import *\n",
+    "import ecosystem_plotting as plot\n",
+    "\n",
+    "\n",
     "tf.random.set_seed(35)\n",
     "np.random.seed(35)\n",
     "\n",
     "# --- 1. CONFIGURATION ---\n",
     "H, W = 100, 100\n",
     "MAX_AGENTS = 150000  # High limit for safety\n",
-    "N_STEPS = 3000\n",
+    "N_STEPS = 500\n",
     "\n",
     "\n",
     "# Define your niche for Spp0\n",
@@ -86,13 +93,16 @@
     "    \"right\":  [0.1, 0.15, 0.1, 0.03, 0.03]\n",
     "}\n",
     "\n",
-    "spp0_center = [0.15, 0.01, 0.55, 0.24]\n",
-    "spp1_center = [0.02, 0.017, 0.002, 0.531]\n",
-    "spp1_niche =  {\n",
-    "    \"center\": [0.43, 0.02, 0.017, 0.002, 0.531],\n",
-    "    \"right\":   [0.5, 0.01,  0.005, 0.001, 0.2],\n",
-    "    \"left\":  [0.35, 0.01,  0.005, 0.001, 0.2]   }\n",
+    "spp0_center = [0.15, 0.01, 0.05, 0.24]\n",
+    "spp1_center = [0.02, 0.02, 0.2, 0.531]\n",
+    "#spp1_center = [0.5, 0.7, 0.5, 0.3]\n",
     "\n",
+    "spp1_niche =  {\n",
+    "    \"center\": [0.43, 0.02, 0.02, 0.2, 0.531],\n",
+    "    \"right\":   [0.5, 0.01,  0.005, 0.1, 0.2],\n",
+    "    \"left\":  [0.35, 0.01,  0.005, 0.1, 0.2]   }\n",
+    "\n",
+    "spp1_center = [0.135, 0.085, 0.125, 0.29] # [N, P, K, O]\n",
     "\n",
     "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"] ], dtype=np.float32)\n",
     "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"]], dtype=np.float32)\n",
@@ -118,7 +128,7 @@
     "    mineralization_rate=mineralization_rate,\n",
     "    seed_cost=seed_cost,\n",
     "    seed_mass=seed_mass,\n",
-    "    K_biomass=K_biomass, soil_base_ratio=np.array(spp0_center), soil_pool_mean = 1.5,\n",
+    "    K_biomass=K_biomass, soil_base_ratio=np.array(spp1_center), soil_pool_mean = 1.5,\n",
     "    soil_pool_std = 0.05, soil_ratio_noise = 0.01, soil_input_rate = soil_input_rate)\n",
     "\n",
     "model.add_initial_seeds(count=300, species_id=0)\n",
