--- a/simulation_notebook.ipynb
+++ b/simulation_notebook.ipynb
@@ -83,26 +83,25 @@
     "# --- 1. CONFIGURATION ---\n",
     "H, W = 100, 100\n",
     "MAX_AGENTS = 150000  # High limit for safety\n",
-    "N_STEPS = 500\n",
+    "N_STEPS = 200\n",
     "\n",
     "\n",
     "# Define your niche for Spp0\n",
+    "# Species 0: High N demand (0.8), Low K demand (0.05)\n",
     "spp0_niche = {\n",
-    "    \"center\": [0.40, 0.25, 0.15, 0.05, 0.05],\n",
-    "    \"left\":   [0.2, 0.1, 0.1, 0.03, 0.03],\n",
-    "    \"right\":  [0.1, 0.15, 0.1, 0.03, 0.03]\n",
+    "    \"center\": [0.4, 0.50, 0.1, 0.05, 0.05],\n",
+    "    \"left\":   [0.2, 0.20, 0.1, 0.03, 0.03],\n",
+    "    \"right\":  [0.1, 0.20, 0.1, 0.03, 0.03]\n",
     "}\n",
     "\n",
-    "spp0_center = [0.15, 0.01, 0.05, 0.24]\n",
-    "spp1_center = [0.02, 0.02, 0.2, 0.531]\n",
-    "#spp1_center = [0.5, 0.7, 0.5, 0.3]\n",
+    "# Spp 1 wants K=0.50\n",
+    "spp1_niche = {\n",
+    "    \"center\": [0.4, 0.05, 0.1, 0.50, 0.05],\n",
+    "    \"left\":   [0.2, 0.03, 0.1, 0.20, 0.03],\n",
+    "    \"right\":  [0.1, 0.03, 0.1, 0.20, 0.03]\n",
+    "}\n",
     "\n",
-    "spp1_niche =  {\n",
-    "    \"center\": [0.43, 0.02, 0.02, 0.2, 0.531],\n",
-    "    \"right\":   [0.5, 0.01,  0.005, 0.1, 0.2],\n",
-    "    \"left\":  [0.35, 0.01,  0.005, 0.1, 0.2]   }\n",
-    "\n",
-    "spp1_center = [0.135, 0.085, 0.125, 0.29] # [N, P, K, O]\n",
+    "soil_base_ratio = [0.35, 0.1, 0.35, 0.1] # [N, P, K, O]\n",
     "\n",
     "NICHE_CENTERS = np.array([spp0_niche[\"center\"],spp1_niche[\"center\"] ], dtype=np.float32)\n",
     "NICHE_LEFT    = np.array([spp0_niche[\"left\"], spp1_niche[\"left\"]], dtype=np.float32)\n",
@@ -128,7 +127,7 @@
     "    mineralization_rate=mineralization_rate,\n",
     "    seed_cost=seed_cost,\n",
     "    seed_mass=seed_mass,\n",
-    "    K_biomass=K_biomass, soil_base_ratio=np.array(spp1_center), soil_pool_mean = 1.5,\n",
+    "    K_biomass=K_biomass, soil_base_ratio=np.array(soil_base_ratio), soil_pool_mean = 1.5,\n",
     "    soil_pool_std = 0.05, soil_ratio_noise = 0.01, soil_input_rate = soil_input_rate)\n",
     "\n",
     "model.add_initial_seeds(count=300, species_id=0)\n",
